<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">picCAR</string>
    <string name="app_name_version">picCAR 1.2</string>
    <string name="menu_app_settings">APP Settings</string>
    <string name="menu_ssc_settings">SSC Settings</string>
    <string name="menu_about">About picCAR</string>

    <string name="title_activity_main">picCAR</string>
    <string name="title_activity_accelerometer">picCAR - Accelerometer control</string>
    <string name="title_activity_wheel">picCAR - Virtual Wheel</string>
    <string name="title_activity_buttons">picCAR - Button control</string>
    <string name="title_activity_touch">picCAR - Touch control</string>
    <string name="title_activity_mcu">picCAR - MCU settings</string>
    <string name="title_activity_about">picCAR - About</string>
    
    <string name="info_text">Tilt your Android device</string>
    <string name="info_text_wheel">Pinch speed\'s slider and tilt device left&#47;right for turning</string>    
    
    <string name="btn_accel">Accelerometer control</string>
    <string name="btn_wheel">Wheel control</string>    
    <string name="btn_button">Button control</string>
    <string name="btn_touch">Touch control</string>

    <string name="forward">forward</string>
    <string name="backward">backward</string>
    <string name="left">left</string>
    <string name="right">right</string>
    
	<string name="mcu_textInfo1">Settings for the PiKoder&#47;SSC. The parameters are transferred and stored in the PiKoder&#47;SSC\'s EEPROM memory.</string>
	<string name="text_about">You can download the latest version of the application and the source code on <a href="http://www.pikoder.com">www.pikoder.com</a></string>
	<string name="mcu_textStop">Stop when the connection is lost:</string>
	<string name="mcu_cBox_AutoOFF">On</string>
	<string name="mcu_after_sec">After (second):</string>
	<string name="mcu_flash_Read">Read data</string>
	<string name="mcu_flash_Write">Write data</string>
	
	<string name="mcu_error_range">Enter the correct value (00.1 &#8211; 99.9)</string>
	<string name="err_data_entry">Data entry error</string>
	<string name="flash_success">Data successfully written to EEPROM</string>
	<string name="error_get_data">Data receive error</string>
	
	<string name="default_MAC">20:13:05:09:11:32</string>
    <string name="default_xR">5</string>
    <string name="default_xMax">7</string>
    <string name="default_yMax">5</string>  
    <string name="default_yThreshold">50</string> 
    <string name="default_pwmMax">126</string>
    <string name="default_commandLeft">1=</string>
    <string name="default_commandRight">2=</string>
    <string name="default_commandHorn">3=</string>
    <string name="default_pwmBtnMotorLeft">1490</string>
    <string name="default_pwmBtnMotorRight">1490</string>
    <string name="default_xRperc">50</string>
	
</resources>