<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:keepScreenOn="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/cxem_logo"
        android:contentDescription="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:alpha="0.35"
        android:paddingBottom="5dp"
        android:paddingRight="5dp"
        android:src="@drawable/cxemnet_logo" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/forward"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:gravity="left|center_vertical"
            android:layout_alignParentLeft="true"
            android:text="@string/forward"
            android:textSize="20sp" />

        <Button
            android:id="@+id/right"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:gravity="right|center_vertical"
            android:layout_alignParentRight="true"
            android:text="@string/right"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:paddingTop="120dp">

        <Button
            android:id="@+id/backward"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:gravity="left|center_vertical"
            android:text="@string/backward"
            android:textSize="20sp" />

        <Button
            android:id="@+id/left"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:gravity="right|center_vertical"
            android:layout_alignParentRight="true"
            android:text="@string/left"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/logo_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.35"
            android:contentDescription="@+id/app_name"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/logo_final"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>
