<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true" >

    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:alpha="0.3"
        android:paddingBottom="5dp"
        android:paddingRight="5dp"
        android:src="@drawable/pikoder_logo"
        android:id="@+id/pikoder_logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="20sp"
        android:text="@string/app_name_version"
        android:textSize="48sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/photo4wd"
        android:contentDescription="@+id/app_name"  
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:alpha="0.35"
        android:paddingLeft="15dp"
        android:paddingBottom="15dp"
        android:src="@drawable/logo_final"/>

    <TextView
        android:padding="20sp"
        android:paddingTop="50sp"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/text_about"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" />
    
</RelativeLayout>
