<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true" >

    <ImageView
        android:id="@+id/pikoder_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:alpha="0.35"
        android:contentDescription="@+id/app_name"
        android:paddingBottom="5dp"
        android:paddingRight="5dp"
        android:src="@drawable/pikoder_logo" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/button_buttons"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:gravity="left|center_vertical"
            android:layout_alignParentLeft="true"
            android:text="@string/btn_button"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_touch"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:gravity="right|center_vertical"
            android:layout_alignParentRight="true"
            android:text="@string/btn_touch"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:paddingTop="120dp">

        <Button
            android:id="@+id/button_accel"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:gravity="left|center_vertical"
            android:text="@string/btn_accel"
            android:textSize="20sp" />

         <Button
            android:id="@+id/button_wheel"
             android:layout_width="180dp"
             android:layout_height="80dp"
             android:gravity="right|center_vertical"
            android:layout_alignParentRight="true"
            android:text="@string/btn_wheel"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/logo_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.35"
            android:contentDescription="@+id/app_name"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/logo_final"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>